# gn_work_tracker

./: LICENSE  README.md  pyproject.toml
examples/: example_work_log.toml
gn_work_log/: main.py  tasks.py
gn_work_log/templates/: monthly_log.tex.jinja
